--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chron-tournaments",
+  "name": "last-fm-friends-dash",
   "version": "1.0.0",
   "description": "",
   "main": "",
@@ -18,8 +18,12 @@
   },
   "dependencies": {
     "history": "^1.17.0",
+    "immutable": "^3.7.6",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.3"
+    "react-redux": "^4.2.0",
+    "react-router": "^1.0.3",
+    "redux": "^3.2.0",
+    "redux-thunk": "^1.0.3"
   }
 }
