--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint app"
+    "lint": "eslint app",
+    "start": "webpack --watch --config webpack.config.js",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.prod.js"
   },
   "author": "",
   "license": "MIT",
