--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "history": "^1.17.0",
     "immutable": "^3.7.6",
+    "moment": "^2.11.2",
     "query-string": "^3.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
